// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-tree ant-tree-icon-hide ant-tree-block-node"
      >
        <div
          role="tree"
        >
          <input
            style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
            tabindex="0"
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="ant-tree-treenode"
          style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
        >
          <div
            class="ant-tree-indent"
          >
            <div
              class="ant-tree-indent-unit"
            />
          </div>
        </div>
        <div
          class="ant-tree-list"
          style="position: relative;"
        >
          <div
            class="ant-tree-list-holder"
          >
            <div>
              <div
                class="ant-tree-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1-0
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      leaf
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      leaf
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1-1
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      sss
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 2
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 2-0
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      kk
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"title":"parent 1","children":[{"title":"parent 1-0","children":[{"title":"leaf","myChecked":false,"_expanded":true},{"title":"leaf","myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true},{"title":"parent 1-1","children":[{"title":"sss","myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true},{"title":"parent 2","children":[{"title":"parent 2-0","children":[{"title":"kk","myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CheckboxStrictly 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-tree ant-tree-icon-hide ant-tree-block-node"
      >
        <div
          role="tree"
        >
          <input
            style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
            tabindex="0"
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="ant-tree-treenode"
          style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
        >
          <div
            class="ant-tree-indent"
          >
            <div
              class="ant-tree-indent-unit"
            />
          </div>
        </div>
        <div
          class="ant-tree-list"
          style="position: relative;"
        >
          <div
            class="ant-tree-list-holder"
          >
            <div>
              <div
                class="ant-tree-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1-0
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      leaf
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      leaf
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1-1
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      sss
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 2
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-tree-switcher-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 2-0
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  />
                  <span
                    class="ant-tree-checkbox"
                  >
                    <span
                      class="ant-tree-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      kk
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"title":"parent 1","children":[{"title":"parent 1-0","children":[{"title":"leaf","myChecked":false,"_expanded":true},{"title":"leaf","myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true},{"title":"parent 1-1","children":[{"title":"sss","myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true},{"title":"parent 2","children":[{"title":"parent 2-0","children":[{"title":"kk","myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true}],"myChecked":false,"_expanded":true}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Expand 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-tree ant-tree-icon-hide ant-tree-block-node ant-tree-show-line"
      >
        <div
          role="tree"
        >
          <input
            style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
            tabindex="0"
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="ant-tree-treenode"
          style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
        >
          <div
            class="ant-tree-indent"
          >
            <div
              class="ant-tree-indent-unit"
            />
          </div>
        </div>
        <div
          class="ant-tree-list"
          style="position: relative;"
        >
          <div
            class="ant-tree-list-holder"
          >
            <div>
              <div
                class="ant-tree-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-close"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_close"
                  >
                    <span
                      aria-label="plus-square"
                      class="anticon anticon-plus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="plus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_close"
                  >
                    <span
                      aria-label="plus-square"
                      class="anticon anticon-plus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="plus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 2
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"title":"parent 1","children":[{"title":"parent 1-0","children":[{"title":"leaf"},{"title":"leaf"}]},{"title":"parent 1-1","children":[{"title":"sss"}]}],"myExpand":false},{"title":"parent 2","children":[{"title":"parent 2-0","children":[{"title":"kk"}]}],"myExpand":false}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-tree ant-tree-icon-hide ant-tree-block-node ant-tree-show-line"
      >
        <div
          role="tree"
        >
          <input
            style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
            tabindex="0"
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="ant-tree-treenode"
          style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
        >
          <div
            class="ant-tree-indent"
          >
            <div
              class="ant-tree-indent-unit"
            />
          </div>
        </div>
        <div
          class="ant-tree-list"
          style="position: relative;"
        >
          <div
            class="ant-tree-list-holder"
          >
            <div>
              <div
                class="ant-tree-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="minus-square"
                      class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="minus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="minus-square"
                      class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="minus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1-0
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  >
                    <span
                      aria-label="file"
                      class="anticon anticon-file ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="file"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      leaf
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  >
                    <span
                      aria-label="file"
                      class="anticon anticon-file ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="file"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      leaf
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="minus-square"
                      class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="minus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1-1
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  >
                    <span
                      aria-label="file"
                      class="anticon anticon-file ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="file"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      sss
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="minus-square"
                      class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="minus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 2
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher_open"
                  >
                    <span
                      aria-label="minus-square"
                      class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="minus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 2-0
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  >
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-end"
                    />
                    <span
                      class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                    />
                  </span>
                  <span
                    class="ant-tree-switcher ant-tree-switcher-noop"
                  >
                    <span
                      aria-label="file"
                      class="anticon anticon-file ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="file"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      kk
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"title":"parent 1","children":[{"title":"parent 1-0","children":[{"title":"leaf","_selected":false,"_expanded":true},{"title":"leaf","_selected":false,"_expanded":true}],"_selected":false,"_expanded":true},{"title":"parent 1-1","children":[{"title":"sss","_selected":false,"_expanded":true}],"_selected":false,"_expanded":true}],"_selected":false,"_expanded":true},{"title":"parent 2","children":[{"title":"parent 2-0","children":[{"title":"kk","_selected":false,"_expanded":true}],"_selected":false,"_expanded":true}],"_selected":false,"_expanded":true}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Select 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-tree ant-tree-icon-hide ant-tree-block-node ant-tree-show-line"
      >
        <div
          role="tree"
        >
          <input
            style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
            tabindex="0"
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="ant-tree-treenode"
          style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
        >
          <div
            class="ant-tree-indent"
          >
            <div
              class="ant-tree-indent-unit"
            />
          </div>
        </div>
        <div
          class="ant-tree-list"
          style="position: relative;"
        >
          <div
            class="ant-tree-list-holder"
          >
            <div>
              <div
                class="ant-tree-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-close"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_close"
                  >
                    <span
                      aria-label="plus-square"
                      class="anticon anticon-plus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="plus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 1
                    </span>
                  </span>
                </div>
                <div
                  class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                >
                  <span
                    aria-hidden="true"
                    class="ant-tree-indent"
                  />
                  <span
                    class="ant-tree-switcher ant-tree-switcher_close"
                  >
                    <span
                      aria-label="plus-square"
                      class="anticon anticon-plus-square ant-tree-switcher-line-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="plus-square"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                        />
                        <path
                          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                    title=""
                  >
                    <span
                      class="ant-tree-title"
                    >
                      parent 2
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"title":"parent 1","children":[{"title":"parent 1-0","children":[{"title":"leaf","mySelected":false},{"title":"leaf","mySelected":false}],"mySelected":false},{"title":"parent 1-1","children":[{"title":"sss","mySelected":false}],"mySelected":false}],"mySelected":false,"_expanded":false},{"title":"parent 2","children":[{"title":"parent 2-0","children":[{"title":"kk","mySelected":false}],"mySelected":false}],"mySelected":false,"_expanded":false}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;
